<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meeting_details_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui_meeting_list.ListMeetingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/meeting_detail"
            android:textSize="@dimen/text_size_title"
            app:layout_constraintBottom_toTopOf="@+id/info_detail_meeting_topic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/info_detail_meeting_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/detail_sujet"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toTopOf="@+id/info_detail_meeting_room"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/detail_title" />

        <TextView
            android:id="@+id/detail_meeting_topic"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:text="@string/meeting_topic"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toBottomOf="@+id/info_detail_meeting_topic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/info_detail_meeting_topic"
            />

        <TextView
            android:id="@+id/info_detail_meeting_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/detail_salle"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toTopOf="@+id/info_detail_meeting_date"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/info_detail_meeting_topic" />

        <TextView
            android:id="@+id/detail_meeting_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/spinner_meeting_room"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toBottomOf="@+id/info_detail_meeting_room"
            app:layout_constraintEnd_toStartOf="@+id/detail_meeting_room_image"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/info_detail_meeting_room" />

        <ImageView
            android:id="@+id/detail_meeting_room_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/detail_meeting_room_image"
            app:layout_constraintBottom_toBottomOf="@+id/detail_meeting_room"
            app:layout_constraintStart_toEndOf="@+id/detail_meeting_room"
            app:layout_constraintTop_toTopOf="@+id/detail_meeting_room"
            app:srcCompat="@drawable/ic_icons_konqueror" />

        <TextView
            android:id="@+id/info_detail_meeting_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/detail_date"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toTopOf="@+id/info_detail_meeting_time"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/info_detail_meeting_room" />

        <TextView
            android:id="@+id/detail_meeting_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:text="@string/date_item"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toBottomOf="@+id/info_detail_meeting_date"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/info_detail_meeting_date" />

        <TextView
            android:id="@+id/info_detail_meeting_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/detail_heure"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toTopOf="@+id/info_detail_meeting_duration"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/info_detail_meeting_date" />

        <TextView
            android:id="@+id/detail_meeting_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:text="@string/hour_item"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toBottomOf="@+id/info_detail_meeting_time"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/info_detail_meeting_time" />

        <TextView
            android:id="@+id/info_detail_meeting_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/detail_duree"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toTopOf="@+id/detail_list_title"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/info_detail_meeting_time" />

        <TextView
            android:id="@+id/detail_meeting_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:text="@string/time_spinner_duration"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toBottomOf="@+id/info_detail_meeting_duration"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/info_detail_meeting_duration" />

        <TextView
            android:id="@+id/detail_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/guest_list"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toTopOf="@+id/detail_guests_recycler_view_email_list"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/info_detail_meeting_duration" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detail_guests_recycler_view_email_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:textSize="@dimen/text_size_medium"
            app:chipSpacingVertical="2dp"
            app:layout_constraintBottom_toTopOf="@+id/detail_action_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_list_title"
            tools:listitem="@layout/item_detail_guest" />

        <Button
            android:id="@+id/detail_action_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/detail_back"
            android:textColor="@color/lamzone_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_guests_recycler_view_email_list" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>