<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_default"
    android:elevation="1dp"
    app:cardCornerRadius="@dimen/dimens_radius"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_list_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin_default"
            android:contentDescription="@string/room_image"
            android:src="@drawable/ic_icons_konqueror"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraint_layout_meeting"
            app:layout_constraintStart_toStartOf="@id/constraint_layout_meeting"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_meeting"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_toStartOf="@+id/delete_button"
            android:layout_toEndOf="@+id/item_list_avatar"
            app:layout_constraintEnd_toStartOf="@+id/delete_button"
            app:layout_constraintStart_toEndOf="@+id/item_list_avatar">

            <TextView
                android:id="@+id/meeting_room"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:text="@string/spinner_meeting_room"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/meeting_topic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/meeting_topic"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:text="@string/meeting_topic"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/meeting_time"
                app:layout_constraintStart_toEndOf="@+id/meeting_room"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/meeting_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:text="@string/hour_item"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/meeting_date"
                app:layout_constraintStart_toEndOf="@+id/meeting_topic"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/meeting_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:text="@string/date_item"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/constraint_layout_meeting"
                app:layout_constraintEnd_toEndOf="@id/constraint_layout_meeting"
                app:layout_constraintStart_toEndOf="@+id/guests_email_group" />

            <TextView
                android:id="@+id/guests_email_group"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:text="@string/default_email_list"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/meeting_date"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_default"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/delete_button"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_delete_black_24dp"
            app:tint="@color/lamzone_900" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
